# gol

./: .gitignore  CMakeLists.txt
.github/workflows/: default.yml
inc/: gol_seq.hpp
src/: CMakeLists.txt  gol.cpp  test.c  test.cu
test/: CMakeLists.txt  test.c  test.cpp
